plugins {
    id 'application'
    id 'checkstyle'
    id 'com.gradleup.shadow' version '9.6.1'
}

checkstyle {
    toolVersion = '11.0.0'
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter:5.12.2'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.12.2'

    String javaFxVersion = '17.0.7'

    implementation("org.openjfx:javafx-base:${javaFxVersion}:win")
    implementation("org.openjfx:javafx-base:${javaFxVersion}:mac")
    implementation("org.openjfx:javafx-base:${javaFxVersion}:linux")
    implementation("org.openjfx:javafx-controls:${javaFxVersion}:win")
    implementation("org.openjfx:javafx-controls:${javaFxVersion}:mac")
    implementation("org.openjfx:javafx-controls:${javaFxVersion}:linux")
    implementation("org.openjfx:javafx-fxml:${javaFxVersion}:win")
    implementation("org.openjfx:javafx-fxml:${javaFxVersion}:mac")
    implementation("org.openjfx:javafx-fxml:${javaFxVersion}:linux")
    implementation("org.openjfx:javafx-graphics:${javaFxVersion}:win")
    implementation("org.openjfx:javafx-graphics:${javaFxVersion}:mac")
    implementation("org.openjfx:javafx-graphics:${javaFxVersion}:linux")
    implementation("org.openjfx:javafx-media:${javaFxVersion}:win")
    implementation("org.openjfx:javafx-media:${javaFxVersion}:mac")
    implementation("org.openjfx:javafx-media:${javaFxVersion}:linux")
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

application {
    mainClass = 'nyonbot.Launcher'
}

tasks.named('test') {
    useJUnitPlatform()
}

tasks.named('jar') {
    manifest {
        attributes(
            'Main-Class': application.mainClass.get()
        )
    }
}

tasks.named('shadowJar') {
    archiveClassifier = 'all'

    manifest {
        attributes(
            'Main-Class': application.mainClass.get()
        )
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}
